welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vacation || weekday==false) {true}
  ^